erDiagram
    User {
string id PK
string password
datetime last_login NULL
boolean is_superuser
string username UK
string first_name
string last_name
boolean is_staff
boolean is_active
datetime date_joined
email email UK
text bio
date date_of_birth NULL
string phone_number
boolean is_profile_complete
datetime created_at
datetime updated_at
    }
    Project {
string id PK
string key UK
string title
json defaults_json NULL
    }
    Plan {
string id PK
string key UK
bigint reserved_micro
bigint spent_micro
fk project NULL
    }
    Plan ||--o{ Project : project
    Transition {
string id PK
fk plan
string key
string status
    }
    Transition ||--|{ Plan : plan
    Execution {
string id PK
fk transition
string attempt_idx
    }
    Execution ||--|{ Transition : transition
    Event {
string id PK
fk plan
string seq
string prev_hash NULL
string this_hash
json payload
datetime created_at
    }
    Event ||--|{ Plan : plan
    Artifact {
string id PK
fk plan
string uri
string content_hash
string content_type
bigint size_bytes
datetime created_at
    }
    Artifact ||--|{ Plan : plan
    ArtifactSeries {
string id PK
fk plan
string series_key
string total_chunks NULL
datetime created_at
    }
    ArtifactSeries ||--|{ Plan : plan